--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cap-angular-contentful",
   "version": "0.0.1",
   "description": "Angular module with a Contentful API Service",
+  "scripts": {
+    "packagr": "ng-packagr -p ng-package.json"
+  },
   "private": false,
   "author": {
     "name": "Software Allies",
@@ -31,18 +34,40 @@
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@auth0/angular-jwt": "^3.0.1",
-    "uuid": "^3.3.3",
-    "tslib": "^1.9.0"
+    "uuid": "^3.3.3"
   },
   "license": "MIT",
-  "main": "bundles/cap-angular-contentful.umd.js",
-  "module": "fesm5/cap-angular-contentful.js",
-  "es2015": "fesm2015/cap-angular-contentful.js",
-  "esm5": "esm5/cap-angular-contentful.js",
-  "esm2015": "esm2015/cap-angular-contentful.js",
-  "fesm5": "fesm5/cap-angular-contentful.js",
-  "fesm2015": "fesm2015/cap-angular-contentful.js",
-  "typings": "cap-angular-contentful.d.ts",
-  "metadata": "cap-angular-contentful.metadata.json",
-  "sideEffects": false
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "~8.3.23",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@auth0/angular-jwt": "^3.0.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~5.4.0",
+    "rxjs": "~6.4.0",
+    "ts-node": "~7.0.0",
+    "tslib": "^1.10.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
+  }
 }
